# qq-music-spotify-sync

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
scripts/: get_refresh_token.py
src/qq_spotify_sync/: config.py  main.py  matcher.py  notifier.py  qq_music.py  spotify_client.py
tests/: test_matcher.py  test_qq_music.py  test_spotify_client.py
tests/fixtures/: qq_chart_response.json  qq_chart_response_current.json  qq_wrong_chart_response.json
